# gcp-container-run

./: Dockerfile  Makefile  README.md  pyproject.toml
src/todo/: app.py
