[project]
name = "todo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mitchell Kimbell", email = "mfkimbell@gmail.com"},
]
dependencies = ["flask>=3.1.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
